Update ProcessPixelLine.java
ref